# betaNEX

./: .air.toml  .dockerignore  .editorconfig  .env.example  .gitignore  .golangci.yml  CONTRIBUTING.md  DEVPOST-004.md  DEVPOST-004ru.md  DEVPOST-005.md  DEVPOST-005ru.md  DEVPOST-022.md  DEVPOST-022ru.md  DEVPOST_003.md  DEVPOST_003ru.md  Dockerfile  GoNex.md.docx.md  Makefile  README.md  backend.md  compose.yaml  devpost_006.md  devpost_006ru.md  go.mod  go.sum  package-lock.json  package.json  pnpm-lock.yaml  sqlc.yaml  vercel.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  release.yml
ai-gateway/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tenants.example.json
ai-gateway/app/: __init__.py  config.py  deps.py  main.py
ai-gateway/app/api/: routes.py  schemas.py
ai-gateway/app/core/: budget_store.py  context_registry.py  errors.py  limits.py  logging.py  metrics.py  ratelimit.py  request_id.py  response_cache.py  retry.py
ai-gateway/app/providers/: base.py  exceptions.py  gemini.py  gigachat.py  openai_compat.py  yandexgpt.py
ai-gateway/app/services/: ai_service.py  budget_service.py
ai-gateway/tests/: test_ai_service_cache.py  test_ai_service_fallback.py  test_ai_service_system_prompt.py  test_budget_e2e.py  test_budget_service.py  test_context_registry.py  test_gateway_auth.py  test_metrics.py  test_provider_gigachat.py  test_provider_openai_compat.py  test_provider_yandexgpt.py  test_ratelimit.py  test_redis_backends.py  test_request_id.py  test_request_limits.py  test_response_cache.py
api/: embed.go  embed.md  openapi.yaml
api/bruno/: bruno.json  finance-accounts.bru  finance-create-account.bru  finance-post-entry.bru  healthz.bru  readyz.bru
beta/: README.md
beta/FrankAI/: .gitignore  README.md  pyproject.toml  requirements-dev.txt
beta/FrankAI/frankai/: __init__.py  engine.py  model.py  tokenizer.py
beta/FrankAI/frankai/data/: sample_corpus.txt
beta/FrankAI/scripts/: train.py
beta/FrankAI/tests/: test_frankai.py
beta/Nex-pilot/: .env.example  README.md  pyproject.toml  requirements.txt
beta/Nex-pilot/nexpilot/: __init__.py  assistant.py  cli.py  config.py  memory.py  prompts.py
beta/Nex-pilot/nexpilot/backends/: base.py  frankai_backend.py  gateway_backend.py
deploy/: .env.example  Caddyfile  README.md  compose.prod.yaml
docs/: architecture-go.md  decision-log.md  dev-tools.md  go-guide.md  how-to-write-a-module.md  observability.md  roadmap.md  tech-stack.md
learning/: resources.md
load/: README.md  smoke.js
migrations/: 00001_init.sql  00002_finance.sql  00003_search.sql  00004_files.sql  00005_finance_stats.sql  00006_idempotency.sql  00007_campus.sql  00008_tasks.sql  00009_tasks_assignee_idx.sql  00010_platform.sql  README.md  embed.go  embed.md
observability/: prometheus.yml
tools/: README.md  api_smoke.py  nex_api.py  seed_demo.py
web/: .env.example  Dockerfile  Dockerfile.dockerignore  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.md  vite.config.ts
(+355 files in other folders)
