[project]
name = "nex-ai-gateway"
version = "0.1.0"
description = "Учебный AI-шлюз к LLM-провайдерам (Gemini / OpenAI-совместимые) — практика выноса AI-вызовов из фронтенда на бэкенд для проекта NEX."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
