[project]
name = "frankai"
version = "0.1.0"
description = "Учебный прототип собственной языковой модели — символьная RNN на NumPy, обучаемая с нуля, для практики."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["frankai"]
