[project]
name = "nex-pilot"
version = "0.1.0"
description = "Учебный ассистент поверх FrankAI (по умолчанию) или ai-gateway (опционально) — память диалога, промпт-шаблон, CLI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FrankAI НЕ указан здесь: у него нет версии на PyPI, `pip install .`
    # не смог бы его найти. Ставится отдельно как editable-пакет из
    # соседней папки — см. requirements.txt (`-e ../FrankAI`) и README.
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nexpilot"]
